# tasktracker-hugo

./: README.md
.github/workflows/: deploy-docs.yml  deploy-ui.yml
backend/: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: base.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_health.py
docs/: .gitignore  go.mod  go.sum  hugo.toml
docs/assets/css/: custom.css
docs/config/development/: hugo.toml
docs/content/: _index.md
docs/content/docs/: _index.md
docs/content/docs/backend/: _index.md
docs/content/docs/frontend/: _index.md
docs/content/docs/getting-started/: _index.md
docs/content/docs/reference/: _index.md
frontend/: .env.example  .gitignore  AGENTS.md  README.md  biome.json  components.json  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/AppShell/: AppShell.test.tsx  AppShell.tsx
frontend/src/components/ui/: alert.tsx  button.tsx
frontend/src/lib/: api.ts
frontend/src/pages/Home/: Home.test.tsx  Home.tsx
frontend/src/pages/NotFound/: NotFound.test.tsx  NotFound.tsx
frontend/src/pages/Projects/: Projects.test.tsx  Projects.tsx
frontend/src/pages/Reports/: Reports.test.tsx  Reports.tsx
frontend/src/providers/ThemeProvider/: ThemeProvider.test.tsx  ThemeProvider.tsx
frontend/src/store/: appAtoms.ts
frontend/src/test/: setup.ts
